# prompt-scaler

./: .env.litellm  .env.litellm-proxy.template  .env.ollama  .env.template  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  deny.toml  docker-compose.yml  lefthook.yml  litellm_config.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json  settings.local.json
.clinerules/: architecture.md  commands.md  rust-style.md
.github/workflows/: ci.yml
benchmarks/ocr/: bad_ground_truth.csv  input.csv  output-gemini-2.0-flash.jsonl  output-tesseract.jsonl  output-textract.jsonl  results.html
benchmarks/ocr/templates/: results.html.j2
docs/specs/: passthrough.md
docs/tasks/: release.md
plans/: MULTIPAGE_TIFF.md
schemas/: ChatInput.json  ChatOutput.json  ChatPrompt.json  OcrInput.json  OcrOutput.json  README.md
scripts/: compare-models.py  compare-text-path-columns.py  jsonl-key-to-text-files.py  ocr-benchmark.py  ocr-to-markdown.py
scripts/support/: __init__.py  doc_tokens.py  jinja_filters.py  jsonl.py  ocr_benchmark.py
scripts/support/models/: __init__.py  chat_input.py  chat_output.py  chat_prompt.py  ocr_input.py  ocr_output.py
src/: aws.rs  chat_stream.rs  client.rs  cpu_limit.rs  data_url.rs  io.rs  litellm.rs  llm_client.rs  main.rs  page_iter.rs  prelude.rs  prompt.rs  rate_limit.rs  retry.rs  schema.rs  toml_utils.rs  ui.rs  work_items.rs
src/async_utils/: blocking_iter_streams.rs  io.rs  mod.rs  size_hint.rs
src/cmd/: chat.rs  mod.rs  ocr.rs  schema.rs
src/drivers/: bedrock.rs  echo.rs  mod.rs  native.rs  openai.rs  vertex.rs
src/queues/: chat.rs  mod.rs  ocr.rs  work.rs
src/queues/ocr/: default_ocr_prompt.toml  example_output.md  mod.rs
src/queues/ocr/engines/: file.rs  llm.rs  mod.rs  page.rs  pdftotext.rs  split_pages.rs  tesseract.rs  textract.rs
tests/: cli.rs
tests/fixtures/: input.jsonl  prompt.toml  schema.json  schema.py
tests/fixtures/echo/: input.csv  prompt.toml
tests/fixtures/external_schemas/: input.csv  prompt_py.toml  prompt_ts.toml  schema.py  schema.ts  schema_ts.json
tests/fixtures/images/: input.csv  prompt.toml  schema.json  schema.ts
tests/fixtures/ocr/: input.csv  tiff_input.csv  two_pages.odt
tests/fixtures/skip_and_passthrough/: input.csv  input.jsonl  prompt.toml
tests/fixtures/texts/: input.csv  prompt.toml
