[package]
name = "prompt-scaler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
assert_cmd = "2.0.16"
async-openai = { version = "0.28.0", features = ["byot"] }
async-trait = "0.1.88"
base64 = "0.22.1"
clap = { version = "4.5.28", features = ["derive", "wrap_help"] }
csv = "1.3.1"
csv-async = { version = "1.3.0", features = ["tokio"] }
dotenv = "0.15.0"
futures = "0.3.31"
handlebars = "6.3.2"
infer = "0.19.0"
#indicatif = "0.17.11"
jsonschema = { version = "0.29.1", features = ["resolve-async"] }
keen-retry = "0.5.0"
mime_guess = "2.0.5"
peekable = { version = "0.3.0", features = ["tokio"] }
reqwest = "0.12.15"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempdir = "0.3.7"
tokio = { version = "1.44.1", features = [
    "macros",
    "tracing",
    "rt-multi-thread",
    "fs",
    "io-std",
    "io-util",
    "process",
    "sync",
] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
toml = "0.8.20"
tracing = "0.1.41"
#tracing-indicatif = "0.3.9"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
