[project]
name = "prompt-scaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.2.0",
    "datamodel-code-generator>=0.30.0",
    "jinja2>=3.1.6",
    "markdown>=3.8",
    "markupsafe>=3.0.2",
    "pydantic>=2.11.0",
]
